Fix change compression when editing fields: showBookmark was committing changes

and notifyManagers() was leading to a third save and a second full-tree-reload.
Removed these calls, since command::redo does it already.

Also fixed change compression messing up the "old value", so undo didn't restore
the orig value.

FIXED-IN: 4.6.1
BUG: 242884